Posts Loader Spacing Fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1447,7 +1447,7 @@ h4.postDetails {
 }
 
 .postsLoaderContainer {
-    height: 8em;
+    height: 15em;
     display: block;
 }
 
